# presenceforge

./: .env.example  .gitignore  Cargo.toml  EXAMPLES_MIGRATION.md  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: basic-ci.yml
.history/: Cargo_20251001122344.toml  Cargo_20251001124022.toml
.history/src/: client_20251001122848.rs  client_20251001123012.rs  error_20251001122612.rs  lib_20251001122911.rs  main_20251001121955.rs  main_20251001122014.rs  main_20251001122100.rs  main_20251001122943.rs
.history/src/activity/: builder_20251001122814.rs  mod_20251001124023.rs
.history/src/ipc/: connection_20251001122707.rs
changelogs/: 0.1.0-dev.md  0.1.0.md  0.2.0.md  0.2.1.md  unreleased.md
docs/: ACTIVITY_BUILDER_REFERENCE.md  API_REFERENCE.md  ASYNC_RUNTIMES.md  DISCORD_RPC_FROM_SCRATCH.md  ERROR_HANDLING.md  FAQ.md  GETTING_STARTED.md  PIPE_SELECTION.md
examples/: README.md  async_smol.rs  async_std.rs  async_tokio.rs  async_tokio_reconnect.rs  basic.rs  basic_flatpak.rs  builder_all.rs  coding_status.rs  connection_retry.rs  custom_activity.rs  event_listener.rs  game_demo.rs  pipe_selection.rs  ready_event.rs  update_activity_tokio.rs
migrations/: v0.2.0-migration-guide.md
scripts/: check_clippy.sh  check_fmt.sh  clippy_god_mode.sh  count_rust_loc.sh  list_rust_files.sh  project_tree.sh  spdx.py
src/: client.rs  error.rs  lib.rs  macros.rs  main.rs  nonce.rs  retry.rs  utils.rs
src/activity/: builder.rs  mod.rs  types.rs
src/async_io/: adapters.rs  client.rs  mod.rs  traits.rs
src/async_io/async_std/: mod.rs
src/async_io/smol/: mod.rs
src/async_io/tokio/: mod.rs
src/ipc/: connection.rs  discovery.rs  mod.rs  protocol.rs
src/retry/: tests.rs
src/sync/: client.rs  mod.rs
tests/: integration_activity_builder.rs  integration_activity_serialization.rs  integration_error_handling.rs  integration_ipc_protocol.rs  integration_retry.rs
