[package]
name = "presenceforge"
version = "0.0.0"
edition = "2021"
authors = ["Sreehari Anil <sreehari7102008@gmail.com>"]
description = "A library for Discord Rich Presence (IPC) integration"
readme = "README.md"
repository = "https://github.com/Sreehari425/presenceforge"
license = "MIT OR Apache-2.0"
keywords = ["discord", "rpc", "rich-presence", "ipc", "gaming"]
categories = ["api-bindings", "games"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[example]]
name = "basic"
doc-scrape-examples = true

[[example]]
name = "game_demo"

[[example]]
name = "coding_status"

[[example]]
name = "custom_activity"
